--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,33 +16,43 @@
         tools:targetApi="31">
         <activity
             android:name=".ReviewRideOffersActivity"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".ReviewRideRequestsActivity"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".NewRideRequest"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".NewRideOffer"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".RideOffers"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".UserPointsActivity"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".DriverActivity"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".RiderActivity"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".Register"
+            android:screenOrientation="sensor"
             android:exported="false" />
         <activity
             android:name=".Login"
+            android:screenOrientation="sensor"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -52,6 +62,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="sensor"
             android:exported="true" />
     </application>
 
