--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.RidingApp"
         tools:targetApi="31">
         <activity
+            android:name=".ReviewAcceptedOffersActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReviewAcceptedRequestsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ReviewRideOffersActivity"
             android:exported="false" />
         <activity
